<resources>
    <string name="app_name">百年中堂-商用版</string>
    <string name="apptab_me">我的</string>
    <string name="apptab_homepage">设备</string>
    <string name="apptab_health_home">健康之家</string>
    <string name="apptab_shopping_mall">商城</string>
    <string name="personal_files">个人档案</string>
    <string name="health_report">健康报告</string>
    <string name="ele_report">电子报告</string>
    <string name="report_time">时间:</string>
    <string name="report_address">地址:</string>
    <string name="report_mobile">手机:</string>
    <string name="report_gcid">编号:</string>
    <string name="report_gcstatus">状态:</string>
    <string name="report_mealname">套餐:</string>
    <string name="gene_report">基因报告</string>
    <string name="login">登录</string>
    <string name="wx_login">微信登录</string>
    <string name="third_login">第三方登录</string>
    <string name="hint_login_name">请输入用户名</string>
    <string name="hint_psd_name">请输入密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="vcode">验证码</string>
    <string name="input_vcode">请输入您的联系电话</string>
    <string name="toast_vcode_error">验证码错误，请重新输入验证码</string>
    <string name="account_is_null">账号不能为空</string>
    <string name="psw_is_null">密码不能为空</string>
    <string name="hello">您好,</string>
    <string name="hello_login">欢迎来到百年中堂，立即</string>
    <string name="login_register">注册</string>
    <string name="login_account">账号</string>
    <string name="login_psd">密码</string>
    <string name="login_loading">正在登录中...</string>
    <string name="bind_user">绑定账号</string>
    <string name="bind_wx">微信解绑</string>
    <string name="bind_content">该微信可绑定新账号和已有账号\n</string>
    <string name="bind_register"><html><font color="#282828">没账号？先</font><font color="#32b2fb">注册</font></html></string>
    <string name="bind">绑定</string>
    <string name="heartrate">血压</string>
    <string name="oxygen">血氧</string>
    <string name="temp">体温</string>
    <string name="electrocardiogram">心电图</string>
    <string name="start">开始测量</string>
    <string name="stopmeasure">停止测量</string>
    <string name="reference_value">参考数值》</string>
    <string name="back">返回</string>
    <string name="health_charging">设备正在充电中，请稍后</string>
    <string name="health_uncontact">设备未连接手机</string>
    <string name="all_member">全部成员</string>
    <string name="all_project">全部项目</string>
    <string name="battery">电量:</string>
    <string name="the">本次</string>
    <string name="previous">上次</string>
    <string name="result">测量</string>
    <string name="Normal">正常</string>
    <string name="high_fever">高烧</string>
    <string name="low_fever">低烧</string>
    <string name="high_oxygen_content">含氧过高</string>
    <string name="low_oxygen_content">含氧过低</string>
    <string name="more_historical_record">更多历史记录 ></string>
    <string name="no_location_permission">没有定位权限</string>
    <string name="wait">请稍等...</string>
    <string name="logon">登录中...</string>
    <string name="get_data">获取数据中...</string>
    <string name="loginout">退出登陆中...</string>
    <string name="Ave_latest">最近平均30天</string>
    <string name="loginout_hint">再按一次退出程序</string>
    <string name="register_over">注册</string>
    <string name="register_user">新用户注册</string>
    <string name="register">注册</string>
    <string name="register_input_user">请输入商户名称</string>
    <string name="register_input_name">请输入商户地址</string>
    <string name="register_input_phone">请输入负责人姓名</string>
    <string name="register_input_psd">请输入密码(6-12个字符)</string>
    <string name="register_sure_psd">请设置3位以上的密码</string>
    <string name="register_vcode">获取验证码</string>
    <string name="recapture_vcode">重新获取</string>
    <string name="login_prompt">注册即表示你同意百年中堂</string>
    <string name="user_usage_protocol">《用户使用协议》</string>
    <string name="user_protocol">用户协议</string>
    <string name="information_details">资讯详情</string>
    <string name="prompt_login_name_not_empty">用户名不能为空，请输入用户名！</string>
    <string name="prompt_login_name_not_allow">用户名必须3-10位</string>
    <string name="prompt_register_name_not_allow">姓名不能为空</string>
    <string name="prompt_login_passwrod_not_empty">密码不能为空，请输入密码！</string>
    <string name="prompt_modify_old_passwrod_not_empty">密码不能为空，请输入密码！</string>
    <string name="prompt_modify_new_passwrod_not_empty">密码不能为空，请输入密码！</string>
    <string name="prompt_passwrod_not_allow">密码必须6-20个字符</string>
    <string name="prompt_phone_number_invalid">输入的手机号码无效，请输入正确的手机号码！</string>
    <string name="get_verification_code_error">获取验证码错误</string>
    <string name="prompt_verification_code_not_empty">验证码不能为空，请输入正确验证码</string>
    <string name="prompt_register_check_not_false">请同意</string>
    <string name="register_datalife_protocol">请阅读百年中堂用户使用协议</string>
    <string name="register_upload">请上传有效证件（相关有效证件）</string>
    <string name="register_upload_pic">上传照片</string>
    <string name="register_next">下一步</string>
    <string name="register_company_name_isnull">注册商户名不能为空</string>
    <string name="register_company_address_isnull">注册商户地址不能为空</string>
    <string name="register_name_isnull">注册商户负责人不能为空</string>
    <string name="register_phone_isnull">注册联系电话不能为空</string>
    <string name="register_psd_isnull">注册密码不能为空</string>
    <string name="register_cert_isnull">注册证件不能为空</string>
    <string name="shoppingcar_manager">购物车管理</string>
    <string name="ordermanager">订单管理</string>
    <string name="familymanager">家庭管理</string>
    <string name="collectionmanager">收藏管理</string>
    <string name="equipmanager">设备管理</string>
    <string name="planmanager">计划管理</string>
    <string name="systemsetting">系统管理</string>
    <string name="bindmember">成员绑定</string>
    <string name="my_vip">我的vip会员</string>
    <string name="expiry_time">2018-8-8到期</string>
    <string name="me_setting">设置</string>
    <string name="me_datetest">数据检测</string>
    <string name="me_red_envelope">我的红包</string>
    <string name="me_help">帮助中心</string>
    <string name="user_info">基本信息</string>
    <string name="text_change_cancle">取消</string>
    <string name="text_change_ok">完成</string>
    <string name="text_Myinfo_day">日</string>
    <string name="text_Myinfo_month">月</string>
    <string name="text_Myinfo_years">年</string>
    <string name="my_username">姓名:</string>
    <string name="my_sex_nan">男</string>
    <string name="my_sex_nv">女</string>
    <string name="my_sex_ch">性别:</string>
    <string name="my_select_ch">请选择</string>
    <string name="my_add_hint">请输入用户名</string>
    <string name="my_age_ch">年龄:</string>
    <string name="my_height_ch"> 身高:</string>
    <string name="my_weight_ch"> 体重:</string>
    <string name="my_select2_ch">可选</string>
    <string name="my_weight">体重</string>
    <string name="choose_time">请选择时间</string>
    <string name="choose_weight">请选择体重</string>
    <string name="choose_height">请选择身高</string>
    <string name="take_photo">拍摄</string>
    <string name="system_photo">从相册选择</string>
    <string name="analyze_project_9">基础代谢</string>
    <string name="evaluate">评价</string>
    <string name="feedback">意见反馈</string>
    <string name="scavenging_caching">清除缓存</string>
    <string name="about_app">关于百年中堂</string>
    <string name="app_exit">退出登录</string>
    <string name="update_app">版本更新</string>
    <string name="connecting_equip">当前设备</string>
    <string name="connected_equip">我的设备</string>
    <string name="searched_equip">其他设备</string>
    <string name="search_equip">搜索设备</string>
    <string name="add_member">添加成员</string>
    <string name="bind_equit">绑定设备</string>
    <string name="searching_equip">搜索设备中...</string>
    <string name="no_searched_equip">未搜索到设备,</string>
    <string name="connected_equit_success">连接设备成功</string>
    <string name="connecting_equit">连接中</string>
    <string name="bind_sure">确定绑定</string>
    <string name="machine_name">设备名称:</string>
    <string name="bind_member">绑定成员:</string>
    <string name="add_bind_member">家庭成员</string>
    <string name="sure">确定</string>
    <string name="save">保存</string>
    <string name="bingmember">添加绑定成员</string>
    <string name="family_addmember">绑定成员</string>
    <string name="yuebao_bind">月报绑定</string>
    <string name="is_check_net">请检测手机网络</string>
    <string name="header">头像</string>
    <string name="username">姓名</string>
    <string name="user_sex">性别</string>
    <string name="user_birthday">生日</string>
    <string name="user_height">身高</string>
    <string name="user_tel">绑定手机</string>
    <string name="user_area">地区</string>
    <string name="user_local">收货地址</string>
    <string name="nav_usermanage">用户管理</string>
    <string name="add_user">添加家庭成员</string>
    <string name="add_user_nickname">昵称</string>
    <string name="add_user_weight">体重</string>
    <string name="add_user_age">年龄</string>
    <string name="add_user_tel">手机号</string>
    <string name="add_user_local">所在地区</string>
    <string name="add_input_tel">请填写你的手机号</string>
    <string name="add_input_local">请选择你的所在地区</string>
    <string name="no_add_user">您还没有家庭成员,请添加</string>
    <string name="add_input_name">请输入你的姓名</string>
    <string name="add_input_height">请设置你的身高</string>
    <string name="add_input_weight">请设置你的体重</string>
    <string name="add_input_age">请设置你的年龄</string>
    <string name="health_testing">健康检测仪</string>
    <string name="datalife_health_test">百年中堂检测仪</string>
    <string name="datalife_body_fat">百年中堂体脂称</string>
    <string name="datalife_blue_tooth">百年中堂智能牙刷</string>
    <string name="home_body_fat">体脂称</string>
    <string name="health_self_testing">健康自测</string>
    <string name="health_info">健康资讯</string>
    <string name="health_tooth">智能牙刷</string>
    <string name="no_net_tip">网络断开,请连接网络后重连。</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="testing_report">测试报告</string>
    <string name="click_testing">点击测试</string>
    <string name="wx_scan">微信扫码</string>
    <string name="mall_main">商城开发中...</string>
    <string name="health_home">健康之家开发中...</string>
    <string name="btn_logout_text">若有用到测量数据同步，点此登录服务器</string>
    <string name="btn_login_text">已登录，点击退出</string>
    <string name="switch_login_hm">登录到健康检测仪</string>
    <string name="switch_login_therm">登录到体温计</string>
    <string name="dbp_value">舒张压</string>
    <string name="sbp_value">收缩压</string>
    <string name="bt">体温</string>
    <string name="spo2h_value">血氧</string>
    <string name="ecg">心电</string>
    <string name="bp">血压</string>
    <string name="rr_max_value">RR最大值:</string>
    <string name="max_value">RR最大值</string>
    <string name="rr_min_value">RR最小值:</string>
    <string name="min_value">RR最小值</string>
    <string name="hr_value">心率</string>
    <string name="ecg_hr_value">心率:</string>
    <string name="hrv_value">心率变异性</string>
    <string name="ecg_hrv_value">心率变异性:</string>
    <string name="mood_value">心情:</string>
    <string name="mood">心情</string>
    <string name="br_value">呼吸率</string>
    <string name="ecg_br_value">呼吸率:</string>
    <string name="duration_value">测量持续时间: </string>
    <string name="pager_speed_value">时间基准:</string>
    <string name="calibration_value">增益:</string>
    <string name="leak_and_check">存在漏气，请检查气路，重新测量。</string>
    <string name="measurement_void">测量过程中请保持安静，此次测量作废，请重新测量。</string>
    <string name="close">关闭</string>
    <string name="testing">检测中</string>
    <string name="temp_unit_f">℉</string>
    <string name="temp_unit_c">℃</string>
    <string name="ask_for_verify_code">请向管理员(%1$s)索取验证码：</string>
    <string name="unconnect">未连接</string>
    <string name="click_connect">点击连接</string>
    <string name="connected">设备已连接</string>
    <string name="connecting">设备连接中</string>
    <string name="openble">打开蓝牙</string>
    <string name="dbpandsdp">收缩压/舒张压</string>
    <string name="history_record">历史纪录</string>
    <string name="analyze_week_ch">周</string>
    <string name="analyze_month_ch">月</string>
    <string name="male">男</string>
    <string name="female">女</string>
</resources>